<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
            android:id="@+id/employee_Id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Surname"
        android:id="@+id/textView"
        android:layout_above="@+id/employee_surname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:layout_marginTop="6dp" />
    <TextView
        android:id="@+id/employee_surname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name"
        android:id="@+id/textView2"
        android:layout_above="@+id/employee_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:layout_marginTop="6dp" />
    <TextView
        android:id="@+id/employee_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/textView3"
        android:layout_above="@+id/employee_age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:layout_marginTop="6dp" />
    <TextView
        android:id="@+id/employee_age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city"
        android:id="@+id/textView4"
        android:layout_above="@+id/employee_city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:layout_marginTop="6dp" />
    <TextView
        android:id="@+id/employee_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />/>
</LinearLayout>